[gd_scene load_steps=2 format=3 uid="uid://bronbdfwv44ym"]

[ext_resource type="Script" uid="uid://b1qbi2r1mreic" path="res://scenes/DifficultySelection.gd" id="1_e6362"]

[node name="DifficultySelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e6362")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.36074692, 0.26006752, 1, 1)

[node name="QuestionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -545.0
offset_top = 50.0
offset_right = 545.0
offset_bottom = 119.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "What Level of Rhythm Would You Like to Try?"
horizontal_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="EasyButton" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Easy"

[node name="NormalButton" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Normal"

[node name="HardButton" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Hard"

[node name="BackButton" type="Button" parent="."]
custom_minimum_size = Vector2(150, 60)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -68.0
offset_right = 95.0
offset_bottom = -37.0
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Back"
